[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui_scenes/cheer_display.tscn" type="PackedScene" id=1]
[ext_resource path="res://shaders/palette_swapper.gdshader" type="Shader" id=2]
[ext_resource path="res://scripts/cheer_manager.gd" type="Script" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/base_color = Color( 0, 1, 0, 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/base_color = Color( 1, 1, 0, 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/base_color = Color( 1, 0, 0, 1 )

[node name="CornerLayout" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Heal" parent="." instance=ExtResource( 1 )]
material = SubResource( 1 )
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 40.0
action = "heal"

[node name="Block" parent="." instance=ExtResource( 1 )]
material = SubResource( 2 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 40.0
action = "block"

[node name="Attack" parent="." instance=ExtResource( 1 )]
material = SubResource( 3 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
margin_right = 0.0
margin_bottom = 0.0
action = "attack"

[node name="Magic" parent="." instance=ExtResource( 1 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 0.0
action = "magic"

[connection signal="clicked" from="Heal" to="." method="_on_Heal_clicked"]
[connection signal="clicked" from="Block" to="." method="_on_Block_clicked"]
[connection signal="clicked" from="Attack" to="." method="_on_Attack_clicked"]
[connection signal="clicked" from="Magic" to="." method="_on_Magic_clicked"]
